# clinicalnoteparser

./: .gitignore  MODEL_CARD.md  README.md  main.py  pyproject.toml  requirements.txt  test_1_pdf_toc.py  test_refined_sections.py
data/: README.md
docs/: overview.md  plan.md  presentation_slide_1.md  presentation_slide_2.md  presentation_slide_3.md  presentation_slide_4.md  presentation_slide_5.md  presentation_slide_6.md  presentation_slide_8.md  presentation_slide_9.md
prompts/: PROMPT_REASONING.md  README.md  plan_generation.md  plan_generation_v1.md  plan_generation_v2.md  section_inference.md  summary_extraction.md  text_summary.md  text_summary_v1.md  text_summary_v2.md
results/0/: chunks.json  evaluation.json  summary.json  toc.json
results/0_v1/: canonical_text.txt  evaluation.json  plan.json  plan.txt  summary.json  summary.txt
results/1/: evaluation.json  plan.json  summary.json  toc.json
results/10_v1/: canonical_text.txt  chunks.json  evaluation.json  plan.json  summary.json  toc.json
results/13/: canonical_text.txt  chunks.json  evaluation.json  summary.json  toc.json
results/14/: canonical_text.txt  chunks.json  evaluation.json  summary.json  toc.json
results/15/: evaluation.json  plan.json  summary.json  toc.json
results/15_v1/: canonical_text.txt  chunks.json  evaluation.json  plan.json  summary.json
tests/: __init__.py  conftest.py  run_all_tests.py  test_chunks.py  test_config.py  test_evaluation.py  test_ingestion.py  test_llm.py  test_pipeline.py  test_planner.py  test_schemas.py  test_sections.py  test_summarizer.py
(+111 files in other folders)
