[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinicalnoteparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-ollama>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pydantic>=2.12.4",
    "pypdf>=6.3.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "typer>=0.20.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/app"]
source-dir = "src"
